--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "acegraph",
+  "name": "graph-path",
   "version": "1.0.1",
-  "main": "dist/acegraph.min.js",
+  "main": "dist/graphPath.min.js",
   "scripts": {
     "test": "jest --coverage",
     "build": "webpack --config webpack.prod.js",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vigdora100/AceGraph.git"
+    "url": "https://github.com/vigdora100/JsonPath.git"
   },
   "author": "Avi vigdorchik",
   "license": "MIT",
